--- a/trial.html
+++ b/trial.html
@@ -55,7 +55,10 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <div id="wares-lab---university-of-georgia" class="section level1">
 <h1>Wares Lab - University of Georgia</h1>
 <div id="metazoan-diversity" class="section level2">
-<h2>2005-2015 Metazoan Diversity</h2>
+<h2>Metazoan Diversity</h2>
+</div>
+<div id="section" class="section level2">
+<h2>2005-2015</h2>
 <pre class="r"><code># download packages rncl and rotl
 #library(devtools)
 #install_github(&quot;fmichonneau/rncl&quot;) # R interface to the Nexus Class Library
